Workaround to fix mention menu too narrow
Fix https://github.com/brunolemos/simplified-twitter/issues/11

--- a/firefox/styles.css
+++ b/firefox/styles.css
@@ -2,3 +2,9 @@
   -webkit-flex-grow: 1 !important;
   flex-grow: 1 !important;
 }
+
+@media (min-width: 800px) {
+  [role='listbox'] {
+    max-width: 500px !important;
+  }
+}
